# SDMetaModel

./: .gitignore  .gitmodules  README.md
code/SDModel_kernel/: CMakeLists.txt
code/SDModel_kernel/declarations/: Stochastic.hpp
code/SDModel_kernel/declarations/submodules/DirectMC/: MassSpringDamper_DMC.hpp
code/SDModel_kernel/declarations/submodules/Surrogate/: NIRPCE.hpp
code/SDModel_kernel/implementations/DirectMC/: MassSpringDamper_DMC.cpp
code/SDModel_kernel/implementations/Surrogate/: NIRPCE.cpp
code/SDModel_kernel/modules/BasisFunctions/: CMakeLists.txt
code/SDModel_kernel/modules/BasisFunctions/declarations/: BasisFunctions.hpp
code/SDModel_kernel/modules/BasisFunctions/implementations/: ComputeBasisFunctions_imp.hpp  GenerateIndices_imp.hpp
code/SDModel_kernel/modules/BasisFunctions/tests/: GenerateIndices_test.cpp  HermiteBasis_test.cpp  HermitePolynomial_test.cpp  Truncation_test.cpp
code/SDModel_kernel/modules/BasisFunctions/utilities/: LibrariesLoader_BF.hpp
code/SDModel_kernel/modules/SimpleModels/: CMakeLists.txt
code/SDModel_kernel/modules/SimpleModels/declarations/: SimpleModels.hpp
code/SDModel_kernel/modules/SimpleModels/declarations/submodules/: MassSpringDamper.hpp
code/SDModel_kernel/modules/SimpleModels/implementations/: MassSpringDamper_imp.hpp
code/SDModel_kernel/modules/SimpleModels/tests/massSpringDamper/: DynamicStiffnessMatrix_test.cpp  MassMatrix_test.cpp  StiffnessMatrix_test.cpp
code/SDModel_kernel/modules/SimpleModels/utilities/: LibrariesLoader_SM.hpp
code/SDModel_kernel/modules/Statistics/: CMakeLists.txt
code/SDModel_kernel/modules/Statistics/declarations/: Statistics.hpp
code/SDModel_kernel/modules/Statistics/declarations/submodules/: Normal.hpp  Uniform.hpp
code/SDModel_kernel/modules/Statistics/implementations/: Normal_imp.hpp  Uniform_imp.hpp
code/SDModel_kernel/modules/Statistics/tests/normal/: RandomSampling_test.cpp
code/SDModel_kernel/modules/Statistics/tests/uniform/: RandomSampling_test.cpp
code/SDModel_kernel/modules/Statistics/utilities/: LibrariesLoader_ST.hpp
code/SDModel_kernel/tests/DirectMC/: MassSpringDamper_DMC_test.cpp
code/SDModel_kernel/tests/Surrogate/: NIRPCE_test.cpp
code/SDModel_kernel/utilities/: LibrariesLoader_RS.hpp
code/finiteElement/: CMakeLists.txt
code/finiteElement/driver/: completeModel.cpp  substructuredModel.cpp
code/finiteElement/inc/: alias.hpp  basisFunctions.hpp  materials.hpp  plates.hpp  solvers.hpp  substructuring.hpp  utilities.hpp
code/finiteElement/src/: basisFunctions.cpp  materials.cpp  plates.cpp  solvers.cpp  substructuring.cpp  utilities.cpp
code/surrogateModel/: CMakeLists.txt
code/surrogateModel/driver/: regularRPCE.cpp  sparseRPCE.cpp
code/surrogateModel/inc/: basisFunctions.hpp  models.hpp  regression.hpp  utilities.hpp
code/surrogateModel/src/: basisFunctions.cpp  models.cpp  regression.cpp  utilities.cpp
notes/: literature.bib  main.out  main.tex
notes/images/: Thumbs.db
notes/includes/: packages.tex  title_page.tex
notes/sections/: DomainDecomposition.tex  Introduction.tex  StochasticModel.tex
notes/sections/DomainDecomposition/: Assembly.tex  InterfaceReduction.tex  SchurComplement.tex  SubstructuresSoE.tex
notes/sections/StochasticModel/: PropagationInSubstructures.tex
prototypes/: HCB.ipynb  HCB_perturbed.ipynb  HCB_random.ipynb  HCB_reduced.ipynb
report/: main.tex
report/algorithms/: PCE.tex  algIFcomplete.tex  craigBampton.tex  crudeUCB.tex  hybridUCB.tex  integratedFramework.tex  looRPCE.tex  monteCarlo.tex  naiveUCB.tex  solutionProcedure.tex  sparsePCEAddition.tex  sparsePCERemoval.tex  sparseRPCEDenominator.tex  sparseRPCENumerator.tex
report/bmvorlagen/: blattkopf_formelsammlung.sty  blattkopf_prepfragen.sty  bm_commands.tex  bm_core.sty  bm_karos.sty  bm_skriptfeatures.sty  bmbericht.cls  bmthesis.cls  dinat_e.bst  tmpruefung.sty
report/bmvorlagen/.svn/: wc.db
report/bmvorlagen/logos/: tmskript.sty
report/chapters/: conclussion.tex  development.tex  discussion.tex  introduction.tex  literature.tex  methodology.tex
report/chapters/development/: integratedFramework.tex  sparseRPCE.tex  uncertainCB.tex
report/chapters/development/sparseRPCE/: crossValidation.tex  inclusionCriteria.tex  selectionProcedure.tex
report/chapters/development/uncertainCB/: crudeUCB.tex  hybridUCB.tex  modeSelection.tex  naiveUCB.tex
report/chapters/discussion/: substructuring.tex  surrogate.tex
report/chapters/discussion/substructuring/: point_A.tex  point_B.tex
report/chapters/discussion/surrogate/: point_A.tex  point_B.tex
report/chapters/introduction/: background.tex  objectives.tex  scope.tex  significance.tex  structure.tex
report/chapters/literature/: stochastic.tex  substructuring.tex
report/chapters/literature/stochastic/: PCE.tex  RPCE.tex  monteCarlo.tex  sparsePCE.tex
report/chapters/literature/substructuring/: craigBampton.tex  enhancedCB.tex  solutionCB.tex
report/chapters/methodology/: caseStudy.tex  measure.tex  testProcedure.tex
report/chapters/methodology/caseStudy/: completeModel.tex  substructuredModel.tex  surrogateModel.tex
report/decorators/: abstract.tex  cover.tex  declaration.tex  literature.bib  symbols.tex
report/images/: caseStudy.tex  completeModel.tex  procedureFramework.tex  procedureUCB.tex  substructuredModel.tex
report/includes/: algorithmFunctions.tex  settings.tex
